Kelsey Development Sandbox/src/objects/Counter__c.object
<CustomObject>
    <fields>
        <fullName>Counter_2__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count Clinician</description>
        <label>Counter 2 (Clinician)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_3__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>Client</description>
        <label>Counter 3 (Client)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <description>To count sub-center</description>
        <label>Counter (Sub-center)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <label>Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <label>Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Description updated 7/24/17 KW
0: Admin
1: Main
2: Sub
3: Clinician</description>
        <label>Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Counter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Item_Name__c</columns>
        <columns>NAME</columns>
        <columns>Counter__c</columns>
        <columns>Counter_2__c</columns>
        <columns>Counter_3__c</columns>
        <columns>Item_ID__c</columns>
        <columns>Role_ID__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Item number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>